# ExoPhotoCurve

./: LICENSE  README.md  pyproject.toml
exophotocurve/: main.py  run_epc.py
exophotocurve/catalogs/: exoclock_transit_catalog.csv  exoclock_transit_catalog.metadata.txt  exoplanet_transit_catalog.csv  exoplanet_transit_catalog.metadata.txt
exophotocurve/modules/: __init__.py  aperture_photometry_tool.py  axis_utils.py  binning_utils.py  cleaning_utils.py  comparison_optimizer.py  config_utils.py  constants.py  detrending_utils.py  exoplanet_catalog.py  gui_layout.py  image_reduction_tool.py  io_utils.py  misc.py  numeric_utils.py  plot_utils.py  sg_loader.py  statistics_utils.py  time_conversion_utils.py  transit_diagnostics.py  user_preferences.py
exophotocurve/tools/: README_catalogue_generation.md  build_exoplanet_catalog_from_exoclock.py  build_exoplanet_catalog_from_nasa.py
