[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exophotocurve"
version = "1.1.0"
description = "GUI program for aperture photometry of known exoplanet transits. Image reduction, light curve construction, analysis and transit modeling"
requires-python = ">=3.10"
readme = "README.md"
license = "LicenseRef-EPC"
license-files = ["LICENSE"]

authors = [
  { name = "Daniele Gasparri", email = "daniele.gasparri@gmail.com" }
]
keywords = [
    "astronomy",
    "photometry",
    "exoplanets",
    "transits",
    "light curves",
    "aperture photometry"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Intended Audience :: Science/Research"
]

dependencies = [
    "numpy>=1.24.1",
    "pandas>=2.2.3, <3.0.0",
    "matplotlib>=3.10.0",
    "scipy>=1.15.0",
    "astropy>=6.1.0",
    "astropy-iers-data",
    "batman-package"
]

[project.urls]
Homepage = "https://github.com/danielegasparri/exophotocurve"
Repository = "https://github.com/danielegasparri/exophotocurve"
Issues = "https://github.com/danielegasparri/exophotocurve/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["exophotocurve*"]

[tool.setuptools.package-data]
"exophotocurve" = ["**/*"]

[project.scripts]
exophotocurve = "exophotocurve.main:main"
